--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
 }
 
-.validator {
+.checker {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,18 +29,10 @@ input {
   border-radius: 5px
 }
 
-span {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 button {
   width: 50%;
   height: 50%;
-  margin: 0 5px 10px 5px;
+  margin: 0 0 10px 0;
   background-color: #6993b8;
   border: 3px solid #456f93;
   border-radius: 5px;
